Fix navbar links to direct to project pages
Updated navbar links to point to actual projects.

--- a/index.html
+++ b/index.html
@@ -22,9 +22,9 @@
                 </div>
                 <div class="menu">
                     <ul class="row">
-                        <li><a href="#">About</a></li>
-                        <li><a href="#">Work</a></li>
-                        <li><a href="#">Contact</a></li>
+                        <li><a href="https://mr-hamem.github.io/New-full-responsive-portfolio/">About</a></li>
+                        <li><a href="https://mr-hamem.github.io/Katen-website/">Work</a></li>
+                        <li><a href="https://mr-hamem.github.io/Bizzency/">Contact</a></li>
                     </ul>
                 </div>
             </div>
@@ -243,4 +243,5 @@
          </section>
         <!-- footer section ends here -->
 </body>
+
 </html>
