Revise index.html for first Figma project
Updated the HTML structure and content for the first Figma project, including navbar, banner, skills, latest works, testimonials, and footer sections.

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Figma to HTML</title>
+    <title>First Figma Project (Non Responsive)</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -24,7 +24,7 @@
                     <ul class="row">
                         <li><a href="https://mr-hamem.github.io/New-full-responsive-portfolio/">About</a></li>
                         <li><a href="https://mr-hamem.github.io/Katen-website/">Work</a></li>
-                        <li><a href="https://mr-hamem.github.io/Bizzency/">Contact</a></li>
+                        <li><a href="https://mr-hamem.github.io/Bizzency/#">Contact</a></li>
                     </ul>
                 </div>
             </div>
@@ -148,6 +148,13 @@
                             <img src="./images/Client Image.png" alt="Happy Client" title="Happy Client">
                             <cite>
                                 <strong>Gemma Nolen</strong>
+                                    <div class="test_icons">
+                                        <i class="fa-solid fa-star"></i>
+                                        <i class="fa-solid fa-star"></i>
+                                        <i class="fa-solid fa-star"></i>
+                                        <i class="fa-solid fa-star"></i>
+                                        <i class="fa-solid fa-star"></i>
+                                    </div>
                                 <span>Google</span>
                             </cite>
                         </div>
@@ -160,6 +167,13 @@
                             <img src="./images/Client Image.png" alt="Happy Client" title="Happy Client">
                             <cite>
                                 <strong>Gemma Nolen</strong>
+                                    <div class="test_icons">
+                                        <i class="fa-solid fa-star"></i>
+                                        <i class="fa-solid fa-star"></i>
+                                        <i class="fa-solid fa-star"></i>
+                                        <i class="fa-solid fa-star"></i>
+                                        <i class="fa-solid fa-star"></i>
+                                    </div>
                                 <span>Google</span>
                             </cite>
                         </div>
@@ -172,6 +186,13 @@
                             <img src="./images/Client Image.png" alt="Happy Client" title="Happy Client">
                             <cite>
                                 <strong>Gemma Nolen</strong>
+                                    <div class="test_icons">
+                                        <i class="fa-solid fa-star"></i>
+                                        <i class="fa-solid fa-star"></i>
+                                        <i class="fa-solid fa-star"></i>
+                                        <i class="fa-solid fa-star"></i>
+                                        <i class="fa-solid fa-star"></i>
+                                    </div>
                                 <span>Google</span>
                             </cite>
                         </div>
@@ -184,6 +205,13 @@
                             <img src="./images/Client Image.png" alt="Happy Client" title="Happy Client">
                             <cite>
                                 <strong>Gemma Nolen</strong>
+                                    <div class="test_icons">
+                                        <i class="fa-solid fa-star"></i>
+                                        <i class="fa-solid fa-star"></i>
+                                        <i class="fa-solid fa-star"></i>
+                                        <i class="fa-solid fa-star"></i>
+                                        <i class="fa-solid fa-star"></i>
+                                    </div>
                                 <span>Google</span>
                             </cite>
                         </div>
@@ -196,6 +224,13 @@
                             <img src="./images/Client Image.png" alt="Happy Client" title="Happy Client">
                             <cite>
                                 <strong>Gemma Nolen</strong>
+                                    <div class="test_icons">
+                                        <i class="fa-solid fa-star"></i>
+                                        <i class="fa-solid fa-star"></i>
+                                        <i class="fa-solid fa-star"></i>
+                                        <i class="fa-solid fa-star"></i>
+                                        <i class="fa-solid fa-star"></i>
+                                    </div>
                                 <span>Google</span>
                             </cite>
                         </div>
@@ -208,6 +243,13 @@
                             <img src="./images/Client Image.png" alt="Happy Client" title="Happy Client">
                             <cite>
                                 <strong>Gemma Nolen</strong>
+                                    <div class="test_icons">
+                                        <i class="fa-solid fa-star"></i>
+                                        <i class="fa-solid fa-star"></i>
+                                        <i class="fa-solid fa-star"></i>
+                                        <i class="fa-solid fa-star"></i>
+                                        <i class="fa-solid fa-star"></i>
+                                    </div>
                                 <span>Google</span>
                             </cite>
                         </div>
@@ -243,5 +285,4 @@
          </section>
         <!-- footer section ends here -->
 </body>
-
 </html>
